--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -478,11 +478,8 @@
     <string name="subaddress_info_transition_name" translatable="false">subaddress_transition</string>
     <string name="subaddress_txinfo_transition_name" translatable="false">subaddress_txinfo_transition</string>
 
-    <string name="tx_details_notes" translatable="false">&lt;span style=\"background-color: #%1$s; color:
-   #%2$s;\"&gt;&nbsp;%3$s&nbsp;&lt;/span&gt;%4$s</string>
-    <string name="receive_subaddress" translatable="false">&lt;span style=\"background-color: #%1$s; color: 
-#%2$s;\"&gt;&nbsp;%3$s&nbsp;&lt;/span&gt;&nbsp;&nbsp;%4$s</string>
-    <string name="subbaddress_info_subtitle" translatable="false">#%1$d: %2$s</string>
+    <string name="tx_details_notes" translatable="false">&lt;span style=\"background-color: #%1$s; color: #%2$s;\"&gt;&nbsp;%3$s&nbsp;&lt;/span&gt;%4$s</string>
+    <string name="receive_subaddress" translatable="false">&lt;span style=\"background-color: #%1$s; color: #%2$s;\"&gt;&nbsp;%3$s&nbsp;&lt;/span&gt;&nbsp;&nbsp;%4$s</string>
 
     <string name="subbaddress_title">العناوين الفرعية</string>
     <string name="subbaddress_name_hint">اسم العنوان الفرعي</string>
