--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -74,7 +74,7 @@
     <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
     <string name="text_send_btc_rate">(Cotação: %1$s %2$s/XMR)</string>
 
-    <string name="label_send_btc_xmrto_info">Visite o SideShift.ai para suporte &amp; rastreio da ordem</string>
+    <string name="label_send_btc_xmrto_info">Visite SideShift.ai para suporte &amp; rastreio da ordem</string>
     <string name="label_send_btc_xmrto_key_lb">Chave secreta\nSideShift.ai</string>
     <string name="label_send_btc_xmrto_key">Chave secreta SideShift.ai</string>
     <string name="label_send_btc_address">Endereço %1$s de destino</string>
@@ -156,9 +156,9 @@
 
     <string name="message_exchange_failed">Não foi possível obter a cotação!\nUse XMR/XMR ou tente novamente</string>
 
-    <string name="generate_title">Criar Carteira</string>
-    <string name="generate_name_hint">Nome da Carteira</string>
-    <string name="generate_password_hint">Senha da Carteira</string>
+    <string name="generate_title">Criar carteira</string>
+    <string name="generate_name_hint">Nome da carteira</string>
+    <string name="generate_password_hint">Senha da carteira</string>
     <string name="generate_fingerprint_hint">Permitir abrir a carteira com impressão digital</string>
     <string name="generate_fingerprint_warn"><![CDATA[
         <strong>Autenticação por impressão digital</strong>
@@ -358,12 +358,13 @@
     <string name="onboarding_button_next">Próximo</string>
     <string name="onboarding_button_ready">Estou pronto!</string>
 
-    <string name="onboarding_welcome_title">Bem-vindo a Monerujo!</string>
-    <string name="onboarding_welcome_information">Esse aplicativo permite que você crie e use carteiras Monero. Você poderá guardar seus queridos moneroj aqui.</string>
+    <string name="onboarding_welcome_title">Bem-vindo à Monerujo!</string>
+    <string name="onboarding_welcome_information">Este aplicativo permite que você crie e use carteiras Monero. Você poderá guardar seus queridos moneroj
+aqui.</string>
     <string name="onboarding_seed_title">Mantenha sua semente em segurança</string>
     <string name="onboarding_seed_information">A semente dá acesso total a qualquer pessoa que a tenha. Se você perdê-la, nós não conseguiremos lhe ajudar a recuperá-la e você perderá seus amados moneroj.</string>
-    <string name="onboarding_xmrto_title">Enviar Crypto</string>
-    <string name="onboarding_xmrto_information">A Monerujo possui o SideShift.ai integrado. Basta colar ou escaner um endereço BTC, LTC, ETH, DASH ou DOGE e você estará enviando cripto, mas gastando em XMR.</string>
+    <string name="onboarding_xmrto_title">Enviar Cripto</string>
+    <string name="onboarding_xmrto_information">A Monerujo possui o SideShift.ai integrado. Basta colar ou escanear um endereço BTC, LTC, ETH, DASH ou DOGE e você estará enviando cripto, mas gastando em XMR.</string>
     <string name="onboarding_nodes_title">"Nós", do seu jeito</string>
     <string name="onboarding_nodes_information">Os nós conectam você à rede Monero. Escolha entre nós públicos ou seja completamente "cypherpunk" e utilize seu próprio nó.</string>
     <string name="onboarding_fpsend_title">Enviar usando a digital</string>
@@ -411,13 +412,13 @@
     <string name="subaddress_select_label">Selecione um subendereço</string>
     <string name="subaddress_details_hint">Toque e segure para mais detalhes</string>
 
-    <string name="delete_alert_message">This wallet will be deleted. Your funds will be gone forever unless you have your seed or a working backup to recover it.</string>
-    <string name="menu_delete">Delete</string><!-- like: "Delete wallet!" -->
-    <string name="delete_failed">Delete failed!</string>
+    <string name="delete_alert_message">Esta carteira será excluída. Seus fundos desaparecerão para sempre, a não ser que você tenha sua semente guardada ou um backup funcional para recuperá-la.</string>
+    <string name="menu_delete">Excluir</string><!-- like: "Delete wallet!" -->
+    <string name="delete_failed">Exclusão falhou!</string>
 
-    <string name="menu_restore">Import wallet</string>
-    <string name="restore_failed">Import failed!</string>
+    <string name="menu_restore">Importar carteira</string>
+    <string name="restore_failed">Importação falhou!</string>
 
-    <string name="menu_deletecache">Reset wallet!</string>
-    <string name="deletecache_alert_message">This wallet will be reset, losing all off-chain data (like notes, account &amp; subaddress names, private transaction keys, ...)! Use this ONLY if this wallet is corrupt and does not load!</string>
+    <string name="menu_deletecache">Resetar carteira!</string>
+    <string name="deletecache_alert_message">Esta carteira será resetada, perdendo todos os dados "off-chain" (como notas, contas &amp; nomes de subendereços, chaves de transações privadas, ...)! Use isso SOMENTE se esta carteira estiver corrompida e não carrega!</string>
 </resources>
