--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -22,7 +22,7 @@
     <string name="label_ok">OK</string>
     <string name="label_cancel">Άκυρο</string>
     <string name="label_close">Κλείσιμο</string>
-    <string name="label_wallet_advanced_details">Πάτησε για λεπτομερείς πληροφορίες</string>
+    <string name="label_wallet_advanced_details">Λεπτομερείς πληροφορίες</string>
 
     <string name="label_send_success">Αποστολή με επιτυχία</string>
     <string name="label_send_done">Έγινε</string>
@@ -433,4 +433,7 @@
     <string name="node_waiting">\u00A0WAITING FOR NODE\u00A0</string>
     <string name="tor_enable_background">"Allow Background Starts" in Orbot Settings to use Tor!</string>
     <string name="tor_noshift">SideShift.ai doesn\'t support Tor.\nDisable Tor to swap XMR.</string>
+
+    <string name="label_seed_offset_encrypt">Seed encryption (EXPERIMENTAL)</string>
+    <string name="seed_offset_hint">Seed Offset Phrase (optional)</string>
 </resources>
