--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -23,7 +23,7 @@
     <string name="label_ok">OK</string>
     <string name="label_cancel">Annuler</string>
     <string name="label_close">Fermer</string>
-    <string name="label_wallet_advanced_details">Toucher pour plus d\'infos</string>
+    <string name="label_wallet_advanced_details">Plus d\'infos</string>
 
     <string name="label_send_success">Envoi réussi</string>
     <string name="label_send_done">Fait</string>
@@ -437,4 +437,7 @@
     <string name="node_waiting">\u00A0WAITING FOR NODE\u00A0</string>
     <string name="tor_enable_background">"Allow Background Starts" in Orbot Settings to use Tor!</string>
     <string name="tor_noshift">SideShift.ai doesn\'t support Tor.\nDisable Tor to swap XMR.</string>
+
+    <string name="label_seed_offset_encrypt">Seed encryption (EXPERIMENTAL)</string>
+    <string name="seed_offset_hint">Seed Offset Phrase (optional)</string>
 </resources>
