--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -23,7 +23,7 @@
     <string name="label_ok">OK</string>
     <string name="label_cancel">Mégsem</string>
     <string name="label_close">Bezárás</string>
-    <string name="label_wallet_advanced_details">Koppints a részletes informcáióért</string>
+    <string name="label_wallet_advanced_details">Részletes információk</string>
 
     <string name="label_send_success">Sikeresen elküldve</string>
     <string name="label_send_done">Kész</string>
@@ -435,4 +435,7 @@
     <string name="node_waiting">\u00A0WAITING FOR NODE\u00A0</string>
     <string name="tor_enable_background">"Allow Background Starts" in Orbot Settings to use Tor!</string>
     <string name="tor_noshift">SideShift.ai doesn\'t support Tor.\nDisable Tor to swap XMR.</string>
+
+    <string name="label_seed_offset_encrypt">Seed encryption (EXPERIMENTAL)</string>
+    <string name="seed_offset_hint">Seed Offset Phrase (optional)</string>
 </resources>
