--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -23,7 +23,7 @@
     <string name="label_ok">OK</string>
     <string name="label_cancel">Cancella</string>
     <string name="label_close">Chiudi</string>
-    <string name="label_wallet_advanced_details">Tocca per informazioni dettagliate</string>
+    <string name="label_wallet_advanced_details">Informazioni dettagliate</string>
 
     <string name="label_send_success">Invio riuscito</string>
     <string name="label_send_done">Fatto</string>
@@ -430,10 +430,13 @@
     <string name="restore_failed">Importazione fallita!</string>
 
     <string name="menu_deletecache">Resetta portafogli!</string>
-    <string name="deletecache_alert_message">Il reset del portafogli cancellerà tutte le informazioni locali (note, nomi di account &amp; sottoindirizzi, chiavi di transazione private, ...)! Procedi solo se il portafogli è corrotto e non si carica!</string>
+    <string name="deletecache_alert_message"><![CDATA[Il reset del portafogli cancellerà tutte le informazioni locali (note, nomi di account & sottoindirizzi, chiavi di transazione private, …)! Procedi solo se il portafogli è corrotto e non si carica!]]></string>
 
     <string name="node_tor_error">Tor required</string>
     <string name="node_waiting">\u00A0WAITING FOR NODE\u00A0</string>
     <string name="tor_enable_background">"Allow Background Starts" in Orbot Settings to use Tor!</string>
     <string name="tor_noshift">SideShift.ai doesn\'t support Tor.\nDisable Tor to swap XMR.</string>
+
+    <string name="label_seed_offset_encrypt">Seed encryption (EXPERIMENTAL)</string>
+    <string name="seed_offset_hint">Seed Offset Phrase (optional)</string>
 </resources>
