--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -23,7 +23,7 @@
     <string name="label_ok">OK</string>
     <string name="label_cancel">Cancelar</string>
     <string name="label_close">Fechar</string>
-    <string name="label_wallet_advanced_details">Toque para mais detalhes</string>
+    <string name="label_wallet_advanced_details">Mais detalhes</string>
 
     <string name="label_send_success">Enviado com sucesso</string>
     <string name="label_send_done">Concluído</string>
@@ -420,10 +420,13 @@ aqui.</string>
     <string name="restore_failed">Importação falhou!</string>
 
     <string name="menu_deletecache">Resetar carteira!</string>
-    <string name="deletecache_alert_message">Esta carteira será resetada, perdendo todos os dados "off-chain" (como notas, contas &amp; nomes de subendereços, chaves de transações privadas, ...)! Use isso SOMENTE se esta carteira estiver corrompida e não carrega!</string>
+    <string name="deletecache_alert_message"><![CDATA[Esta carteira será resetada, perdendo todos os dados "off-chain" (como notas, contas & nomes de subendereços, chaves de transações privadas, …)! Use isso SOMENTE se esta carteira estiver corrompida e não carrega!]]></string>
 
     <string name="node_tor_error">Tor required</string>
     <string name="node_waiting">\u00A0WAITING FOR NODE\u00A0</string>
     <string name="tor_enable_background">"Allow Background Starts" in Orbot Settings to use Tor!</string>
     <string name="tor_noshift">SideShift.ai doesn\'t support Tor.\nDisable Tor to swap XMR.</string>
+
+    <string name="label_seed_offset_encrypt">Seed encryption (EXPERIMENTAL)</string>
+    <string name="seed_offset_hint">Seed Offset Phrase (optional)</string>
 </resources>
