--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -22,7 +22,7 @@
     <string name="label_ok">OK</string>
     <string name="label_cancel">Anulează</string>
     <string name="label_close">Închide</string>
-    <string name="label_wallet_advanced_details">Atinge pentru informații detaliate</string>
+    <string name="label_wallet_advanced_details">Informații detaliate</string>
 
     <string name="label_send_success">Trimis cu succes</string>
     <string name="label_send_done">Gata</string>
@@ -433,4 +433,7 @@
     <string name="node_waiting">\u00A0WAITING FOR NODE\u00A0</string>
     <string name="tor_enable_background">"Allow Background Starts" in Orbot Settings to use Tor!</string>
     <string name="tor_noshift">SideShift.ai doesn\'t support Tor.\nDisable Tor to swap XMR.</string>
+
+    <string name="label_seed_offset_encrypt">Seed encryption (EXPERIMENTAL)</string>
+    <string name="seed_offset_hint">Seed Offset Phrase (optional)</string>
 </resources>
