--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -19,7 +19,6 @@
     <string name="label_ok">确认</string>
     <string name="label_cancel">取消</string>
     <string name="label_close">关闭</string>
-    <string name="label_wallet_advanced_details">点击以查看详情</string>
     <string name="label_send_success">发送成功</string>
     <string name="label_send_done">完成</string>
     <string name="label_receive_info_gen_qr_code">点此获取QR码</string>
@@ -357,4 +356,8 @@
     <string name="node_waiting">\u00A0WAITING FOR NODE\u00A0</string>
     <string name="tor_enable_background">"Allow Background Starts" in Orbot Settings to use Tor!</string>
     <string name="tor_noshift">SideShift.ai doesn\'t support Tor.\nDisable Tor to swap XMR.</string>
+
+    <string name="label_wallet_advanced_details">点击以查看详情</string> <!-- Please chnage to "Detailed information" -->
+    <string name="label_seed_offset_encrypt">Seed encryption (EXPERIMENTAL)</string>
+    <string name="seed_offset_hint">Seed Offset Phrase (optional)</string>
 </resources>
