--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -23,7 +23,6 @@
     <string name="label_ok">好的</string>
     <string name="label_cancel">取消</string>
     <string name="label_close">關閉</string>
-    <string name="label_wallet_advanced_details">點選以獲得詳細資訊</string>
 
     <string name="label_send_success">已成功發送</string>
     <string name="label_send_done">完成</string>
@@ -432,4 +431,8 @@
     <string name="node_waiting">\u00A0WAITING FOR NODE\u00A0</string>
     <string name="tor_enable_background">"Allow Background Starts" in Orbot Settings to use Tor!</string>
     <string name="tor_noshift">SideShift.ai doesn\'t support Tor.\nDisable Tor to swap XMR.</string>
+
+    <string name="label_wallet_advanced_details">點選以獲得詳細資訊</string> <!-- Please chnage to "Detailed information" -->
+    <string name="label_seed_offset_encrypt">Seed encryption (EXPERIMENTAL)</string>
+    <string name="seed_offset_hint">Seed Offset Phrase (optional)</string>
 </resources>
